<resources>
    <string name="app_name">EduCore</string>
    <string name="title_activity_registrar_main">RegistrarMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="number_of_students_registered">Number of students registered:</string>
    <string name="number_of_teachers_registered">Number of teachers registered:</string>
    <string name="number_of_schedules_created">Number of schedules created:</string>
    <string name="number_of_sections">Number of sections:</string>
    <string name="class_grades_in_school">Class grades in school:</string>
    <string name="number_of_classrooms">Number of classrooms:</string>
    <string name="number_of_subjects_added">Number of subjects added:</string>
    <string name="educore_teacher">EduCore Teacher</string>
    <string name="mathematics">Mathematics</string>
    <string name="register_a_new_student">Register a new student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="generated_id">Generated ID:</string>
    <string name="generated_email">Generated Email:</string>
    <string name="enter_student_s_date_of_birth">Enter Student\'s Date of Birth:</string>
    <string name="choose_grade_number">Choose Grade Number:</string>
    <string name="choose_classroom">Choose Classroom:</string>
    <string name="register_student">Register Student</string>
    <string name="june_14_2025">JUNE 14 2025</string>
    <string name="register_a_new_teacher">Register a New Teacher</string>
    <string name="enter_teacher_s_date_of_birth">Enter teacher\'s date of birth:</string>
    <string name="phone_number">Phone Number</string>
    <string name="subject_taught">Subject taught:</string>     <string name="welcome_teacher">Welcome, Teacher</string>
    <string name="student_profile_desc">Student Profile</string>
    <string name="student_name_placeholder">Student Name</string>
    <string name="mark_hint">Mark</string>
    <string name="toggle_feedback_desc">Toggle Feedback</string>
    <string name="feedback_label">Feedback:</string>
    <string name="feedback_hint">Enter feedback for student...</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="absent_label">Absent</string>
    <string name="unexcused_label">Unexcused</string>
    <string name="excused_label">Excused</string>
    <string name="create_assignment">Assignment</string>
    <string name="create_assignment_desc">Create Assignment</string>
    <string name="announce_exam">Exam</string>
    <string name="announce_exam_desc">Announce Exam</string>
    <string name="view_marks">Marks</string>
    <string name="view_marks_desc">View submissions</string>
    <string name="view_timetable">Time Table</string>
    <string name="view_timetable_desc">View timetable</string>
    <string name="view_attendance">Attendance</string>
    <string name="view_attendance_desc">Attendance</string>
    <string name="class_grade">Class Grade</string>
    <string name="subject_name">Subject Name</string>
    <string name="view_submissions">View Submissions</string>
    <string name="exam_date_2025_01_25">Exam Date: 2025-01-25</string>
    <string name="max_100_0">Max: 100.0</string>
    <string name="teacher_john_smith">Teacher: John Smith</string>
    <string name="grade_9">Grade 9</string>
    <string name="select_class">Select Class</string>
    <string name="no_timetable_available">No timetable available.</string>
    <string name="register_teacher">Register Teacher</string>
    <string name="tchr_email">TCHR EMAIL</string>
    <string name="grade">Grade:</string>
    <string name="semester">Semester:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_id">Subject ID:</string>
    <string name="subject_title">Subject Title:</string>
    <string name="subject_target_grade">Subject Target Grade:</string>
    <string name="subject_target_semester">Subject Target Semester:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back">back</string>
    <string name="classroom">Classroom</string>
    <string name="teacher">Teacher</string>
    <string name="assign">Assign</string>
    <string name="assign_homeroom_teacher_to_classroom">Assign Homeroom Teacher to Classroom</string>
    <string name="classrooms">Classrooms</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="profile">Profile</string>
    <string name="subjects">Subjects</string>
    <string name="schedules">Schedules</string>
    <string name="none">None</string>
    <string name="description_about_the_subject">Description about the subject</string>
    <string name="e_g_maths">e.g. Maths</string>
    <string name="generated_password">Generated Password:</string>
    <string name="number_of_teachers_per_subject">Number Of Teachers Per Subject</string>
    <string name="number_of_students_per_grade">Number Of Students Per Grade</string>
    <string name="add_class">Add Class</string>
    <string name="hello_fellow_registrar">Hello, Good to see you again!</string>
    <string name="personal_information">Teacher Information</string>
</resources>